--- a/src/assets/css/minOther/kanjia_detail.scss
+++ b/src/assets/css/minOther/kanjia_detail.scss
@@ -188,6 +188,7 @@
 				> ul {
 					width:100%;
 					overflow:hidden;
+					margin: rem(20) 0;
 					li:first-child  {
 						float:left;
 						border-radius:50%;
