--- a/src/assets/css/other/cart.scss
+++ b/src/assets/css/other/cart.scss
@@ -38,7 +38,7 @@
        // 空的购物车状态
     > .my_list {
       width: 100%;
-
+     
     .empty {
       width: 100%;
       text-align: center;
@@ -46,6 +46,7 @@
       img {
           margin-top: rem(150);
           width: rem(250);
+          background: #fff;
       }
       p {
         margin-top: rem(43);
@@ -63,14 +64,17 @@
   // 加入购物车状态
   .cart_list {
       width: 100%;
+      overflow: hidden;
       dl {
-          width: 100%;
-          // height: rem();
+          width: 115%;
+          height: rem(330);
           display: flex;
-          padding: rem(40) 0;
           border-bottom: 1px solid rgb(235, 227, 227);
+          /*适应苹果*/
+          -webkit-overflow-scrolling:touch;
           dt {
               width: 41%;
+              padding: rem(40) 0;
               span {
                 display: inline-block;
                 width:rem(50);
@@ -98,9 +102,10 @@
                   height: rem(230);
               }
           }
-          dd {
+          dd:nth-child(2) {
               width: 59%;
               display: flex;
+              padding: rem(40) 0;
               flex-direction: column;
               justify-content: space-between;
               position: relative;
@@ -117,7 +122,7 @@
               }
               .operation { // 加减操作
                   position: absolute;
-                  bottom: 0;
+                  bottom: rem(40);
                   right: rem(45);
                   display: flex;
                   span {
@@ -145,6 +150,15 @@
                     border: 1px solid #eee;
                   }
               }
+          }
+          dd:last-child {
+              width:rem(180);
+              height: 100%;
+              line-height: rem(300);
+              background: rgb(206, 13, 13);
+              font-size: rem(40);
+              color: #fff;
+              text-align: center;
           }
       }
   }
