--- a/src/assets/css/other/details.css
+++ b/src/assets/css/other/details.css
@@ -314,11 +314,23 @@
   font-size: 0.44444rem;
 }
 
-.details .details_warpper .details_con #detailContent img {
+.details .details_warpper .details_con #detailContent #recommend div p img {
   font-size: 0.44444rem;
-  max-width: 100%;
-  height: auto;
+  display: block;
+  width: 100% !important;
+  height: auto !important;
   box-sizing: border-box;
+  margin: -1px 0;
+}
+
+.details .details_warpper .details_con #detailContent .m-attrList, .details .details_warpper .details_con #detailContent .list-paddingleft-2 {
+  overflow: hiddle;
+  padding: 0.44444rem 0;
+}
+
+.details .details_warpper .details_con #detailContent .m-attrList li p, .details .details_warpper .details_con #detailContent .list-paddingleft-2 li p {
+  line-height: 1.48148rem;
+  display: flex;
 }
 
 .details .details_commit {
@@ -531,7 +543,11 @@
   color: #962320;
 }
 
-.details .motai .motai_list .motai_con > p {
+.details .motai .motai_list .motai_con .pin-xuanze {
+  width: 100%;
+}
+
+.details .motai .motai_list .motai_con .pin-xuanze > p {
   width: 100%;
   line-height: 1.39259rem;
   font-size: 0.53333rem;
@@ -539,13 +555,13 @@
   margin: 0.14815rem 0;
 }
 
-.details .motai .motai_list .motai_con > ul {
+.details .motai .motai_list .motai_con .pin-xuanze > ul {
   display: flex;
   width: 100%;
   font-size: 0.5037rem;
 }
 
-.details .motai .motai_list .motai_con > ul > li {
+.details .motai .motai_list .motai_con .pin-xuanze > ul > li {
   width: 5.83704rem;
   line-height: 1.12593rem;
   text-align: center;
@@ -554,26 +570,26 @@
   margin: 0 0.19259rem;
 }
 
-.details .motai .motai_list .motai_con > ul .li {
+.details .motai .motai_list .motai_con .pin-xuanze > ul .li {
   border: 1px solid #962320;
   color: #962320;
 }
 
-.details .motai .motai_list .motai_con > ol {
+.details .motai .motai_list .motai_con .pin-xuanze > ol {
   display: flex;
   width: 100%;
   font-size: 0.5037rem;
   flex-wrap: wrap;
 }
 
-.details .motai .motai_list .motai_con > ol > li {
+.details .motai .motai_list .motai_con .pin-xuanze > ol > li {
   padding: 0.31111rem 0.54815rem;
   border-radius: 0.14815rem;
   border: 1px solid #dddddd;
   margin: 0.14815rem 0.19259rem;
 }
 
-.details .motai .motai_list .motai_con > ol .fuwu {
+.details .motai .motai_list .motai_con .pin-xuanze > ol .fuwu {
   border: 1px solid #962320;
   color: #962320;
 }
@@ -711,7 +727,7 @@
   color: #962320;
 }
 
-.details .motai2 .motai_list .motai_con > p {
+.details .motai2 .motai_list .motai_con .xuanze > p {
   width: 100%;
   line-height: 1.39259rem;
   font-size: 0.53333rem;
@@ -719,41 +735,40 @@
   margin: 0.14815rem 0;
 }
 
-.details .motai2 .motai_list .motai_con > ul {
+.details .motai2 .motai_list .motai_con .xuanze > ul {
   display: flex;
   width: 100%;
   font-size: 0.5037rem;
 }
 
-.details .motai2 .motai_list .motai_con > ul > li {
-  width: 5.83704rem;
-  line-height: 1.12593rem;
+.details .motai2 .motai_list .motai_con .xuanze > ul > li {
   text-align: center;
   border-radius: 0.14815rem;
   border: 1px solid #dddddd;
+  margin: 0.14815rem 0.19259rem;
   margin: 0 0.19259rem;
 }
 
-.details .motai2 .motai_list .motai_con > ul .li {
+.details .motai2 .motai_list .motai_con .xuanze > ul .li {
   border: 1px solid #962320;
   color: #962320;
 }
 
-.details .motai2 .motai_list .motai_con > ol {
+.details .motai2 .motai_list .motai_con .xuanze > ol {
   display: flex;
   width: 100%;
   font-size: 0.5037rem;
   flex-wrap: wrap;
 }
 
-.details .motai2 .motai_list .motai_con > ol > li {
+.details .motai2 .motai_list .motai_con .xuanze > ol > li {
   padding: 0.31111rem 0.54815rem;
   border-radius: 0.14815rem;
   border: 1px solid #dddddd;
   margin: 0.14815rem 0.19259rem;
 }
 
-.details .motai2 .motai_list .motai_con > ol .fuwu {
+.details .motai2 .motai_list .motai_con .xuanze > ol .fuwu {
   border: 1px solid #962320;
   color: #962320;
 }
@@ -806,187 +821,6 @@
 }
 
 .details .motai2 .motai_list .mai > button {
-  width: 100%;
-  height: 100%;
-  border: 0;
-  background: #b4272d;
-  color: #fffefb;
-  font-size: 0.63704rem;
-}
-
-.details .moTai_putong {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  animation: motaiK .2s forwards;
-  background: rgba(0, 0, 0, 0.3);
-}
-
-.details .moTai_putong .general {
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background: #fff;
-}
-
-.details .moTai_putong .general .motai_con {
-  width: 100%;
-  padding: 0.60741rem;
-}
-
-.details .moTai_putong .general .motai_con p:first-child {
-  width: 100%;
-  height: 0.88889rem;
-}
-
-.details .moTai_putong .general .motai_con p:first-child span {
-  display: block;
-  width: 0.75556rem;
-  height: 0.75556rem;
-  border-radius: 50%;
-  text-align: center;
-  float: right;
-  line-height: 0.77037rem;
-  color: #959595;
-  border: 1px solid #959595;
-  font-size: 0.47407rem;
-  font-weight: 700;
-}
-
-.details .moTai_putong .general .motai_con .shangpin {
-  width: 100%;
-  display: flex;
-}
-
-.details .moTai_putong .general .motai_con .shangpin > dt {
-  width: 2.51852rem;
-  height: 2.51852rem;
-}
-
-.details .moTai_putong .general .motai_con .shangpin > dt img {
-  width: 100%;
-  height: 100%;
-  border-radius: 0.14815rem;
-}
-
-.details .moTai_putong .general .motai_con .shangpin > dd {
-  padding-left: 0.59259rem;
-  width: 80%;
-}
-
-.details .moTai_putong .general .motai_con .shangpin > dd > h5 {
-  width: 100%;
-  font-size: 0.5037rem;
-  color: #434343;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.details .moTai_putong .general .motai_con .shangpin > dd > span {
-  font-size: 0.41481rem;
-  color: #962320;
-}
-
-.details .moTai_putong .general .motai_con > p {
-  width: 100%;
-  line-height: 1.39259rem;
-  font-size: 0.53333rem;
-  color: #000000;
-  margin: 0.14815rem 0;
-}
-
-.details .moTai_putong .general .motai_con > ul {
-  display: flex;
-  width: 100%;
-  font-size: 0.5037rem;
-}
-
-.details .moTai_putong .general .motai_con > ul > li {
-  width: 5.83704rem;
-  line-height: 1.12593rem;
-  text-align: center;
-  border-radius: 0.14815rem;
-  border: 1px solid #dddddd;
-  margin: 0 0.19259rem;
-}
-
-.details .moTai_putong .general .motai_con > ul .ul {
-  border: 1px solid #962320;
-  color: #962320;
-}
-
-.details .moTai_putong .general .motai_con > ol {
-  display: flex;
-  width: 100%;
-  font-size: 0.5037rem;
-  flex-wrap: wrap;
-}
-
-.details .moTai_putong .general .motai_con > ol > li {
-  padding: 0.31111rem 0.54815rem;
-  border-radius: 0.14815rem;
-  border: 1px solid #dddddd;
-  margin: 0.14815rem 0.19259rem;
-}
-
-.details .moTai_putong .general .motai_con > ol .ol {
-  border: 1px solid #962320;
-  color: #962320;
-}
-
-.details .moTai_putong .general .motai_con .num {
-  width: 100%;
-  display: flex;
-  margin-top: 1.61481rem;
-  justify-content: space-between;
-}
-
-.details .moTai_putong .general .motai_con .num > dt {
-  font-size: 0.5037rem;
-  color: #000;
-}
-
-.details .moTai_putong .general .motai_con .num > dd {
-  display: flex;
-}
-
-.details .moTai_putong .general .motai_con .num > dd span {
-  display: block;
-  width: 1.68889rem;
-  height: 1.37778rem;
-  border: 1px solid #cccccc;
-  text-align: center;
-  font-size: 0.44444rem;
-  font-weight: bold;
-  line-height: 1.37778rem;
-}
-
-.details .moTai_putong .general .motai_con .num > dd span:nth-child(2) {
-  width: 2.08889rem;
-}
-
-.details .moTai_putong .general .motai_con .num > dd span:first-child {
-  border-right: 0;
-  border-radius: 0.14815rem 0 0 0.11852rem;
-}
-
-.details .moTai_putong .general .motai_con .num > dd span:last-child {
-  border-left: 0;
-  border-radius: 0 0.11852rem 0.11852rem 0;
-}
-
-.details .moTai_putong .general .mai {
-  width: 100%;
-  height: 1.83704rem;
-  border-top: 1px solid #aca59b;
-}
-
-.details .moTai_putong .general .mai > button {
   width: 100%;
   height: 100%;
   border: 0;
@@ -1072,7 +906,11 @@
   color: #962320;
 }
 
-.details .moTai_putong2 .general .motai_con > p {
+.details .moTai_putong2 .general .motai_con .xuanze2 {
+  width: 100%;
+}
+
+.details .moTai_putong2 .general .motai_con .xuanze2 > p {
   width: 100%;
   line-height: 1.39259rem;
   font-size: 0.53333rem;
@@ -1080,13 +918,13 @@
   margin: 0.14815rem 0;
 }
 
-.details .moTai_putong2 .general .motai_con > ul {
+.details .moTai_putong2 .general .motai_con .xuanze2 > ul {
   display: flex;
   width: 100%;
   font-size: 0.5037rem;
 }
 
-.details .moTai_putong2 .general .motai_con > ul > li {
+.details .moTai_putong2 .general .motai_con .xuanze2 > ul > li {
   width: 5.83704rem;
   line-height: 1.12593rem;
   text-align: center;
@@ -1095,26 +933,26 @@
   margin: 0 0.19259rem;
 }
 
-.details .moTai_putong2 .general .motai_con > ul .ul2 {
+.details .moTai_putong2 .general .motai_con .xuanze2 > ul .ul2 {
   border: 1px solid #962320;
   color: #962320;
 }
 
-.details .moTai_putong2 .general .motai_con > ol {
+.details .moTai_putong2 .general .motai_con .xuanze2 > ol {
   display: flex;
   width: 100%;
   font-size: 0.5037rem;
   flex-wrap: wrap;
 }
 
-.details .moTai_putong2 .general .motai_con > ol > li {
+.details .moTai_putong2 .general .motai_con .xuanze2 > ol > li {
   padding: 0.31111rem 0.54815rem;
   border-radius: 0.14815rem;
   border: 1px solid #dddddd;
   margin: 0.14815rem 0.19259rem;
 }
 
-.details .moTai_putong2 .general .motai_con > ol .ol2 {
+.details .moTai_putong2 .general .motai_con .xuanze2 > ol .ol2 {
   border: 1px solid #962320;
   color: #962320;
 }
@@ -1168,6 +1006,176 @@
 }
 
 .details .moTai_putong2 .general .mai > button {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  background: #b4272d;
+  color: #fffefb;
+  font-size: 0.63704rem;
+}
+
+.details .moTai_putong {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  animation: motaiK .2s forwards;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.details .moTai_putong .general {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: #fff;
+  transform: translate3d(0, 0, 20%);
+}
+
+.details .moTai_putong .general .motai_con {
+  width: 100%;
+  padding: 0.60741rem;
+}
+
+.details .moTai_putong .general .motai_con p:first-child {
+  width: 100%;
+  height: 0.88889rem;
+}
+
+.details .moTai_putong .general .motai_con p:first-child span {
+  display: block;
+  width: 0.75556rem;
+  height: 0.75556rem;
+  border-radius: 50%;
+  text-align: center;
+  float: right;
+  line-height: 0.77037rem;
+  color: #959595;
+  border: 1px solid #959595;
+  font-size: 0.47407rem;
+  font-weight: 700;
+}
+
+.details .moTai_putong .general .motai_con .shangpin {
+  width: 100%;
+  display: flex;
+}
+
+.details .moTai_putong .general .motai_con .shangpin > dt {
+  width: 2.51852rem;
+  height: 2.51852rem;
+}
+
+.details .moTai_putong .general .motai_con .shangpin > dt img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.14815rem;
+}
+
+.details .moTai_putong .general .motai_con .shangpin > dd {
+  padding-left: 0.59259rem;
+  width: 80%;
+}
+
+.details .moTai_putong .general .motai_con .shangpin > dd > h5 {
+  width: 100%;
+  font-size: 0.5037rem;
+  color: #434343;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.details .moTai_putong .general .motai_con .shangpin > dd > span {
+  font-size: 0.41481rem;
+  color: #962320;
+}
+
+.details .moTai_putong .general .motai_con .pu-xuanze {
+  width: 100%;
+}
+
+.details .moTai_putong .general .motai_con .pu-xuanze > dl {
+  width: 100%;
+}
+
+.details .moTai_putong .general .motai_con .pu-xuanze > dl dt {
+  width: 100%;
+  line-height: 1.39259rem;
+  font-size: 0.53333rem;
+  color: #000000;
+  margin: 0.14815rem 0;
+}
+
+.details .moTai_putong .general .motai_con .pu-xuanze > dl dd {
+  display: flex;
+  width: 100%;
+  font-size: 0.5037rem;
+  flex-wrap: wrap;
+}
+
+.details .moTai_putong .general .motai_con .pu-xuanze > dl dd > span {
+  padding: 0.31111rem 0.54815rem;
+  border-radius: 0.14815rem;
+  border: 1px solid #dddddd;
+  margin: 0.14815rem 0.19259rem;
+}
+
+.details .moTai_putong .general .motai_con .pu-xuanze > dl dd .ol {
+  border: 1px solid #962320;
+  color: #962320;
+}
+
+.details .moTai_putong .general .motai_con .num {
+  width: 100%;
+  display: flex;
+  margin-top: 1.61481rem;
+  justify-content: space-between;
+}
+
+.details .moTai_putong .general .motai_con .num > dt {
+  font-size: 0.5037rem;
+  color: #000;
+}
+
+.details .moTai_putong .general .motai_con .num > dd {
+  display: flex;
+}
+
+.details .moTai_putong .general .motai_con .num > dd span {
+  display: block;
+  width: 1.68889rem;
+  height: 1.37778rem;
+  border: 1px solid #cccccc;
+  text-align: center;
+  font-size: 0.44444rem;
+  font-weight: bold;
+  line-height: 1.37778rem;
+}
+
+.details .moTai_putong .general .motai_con .num > dd span:nth-child(2) {
+  width: 2.08889rem;
+}
+
+.details .moTai_putong .general .motai_con .num > dd span:first-child {
+  border-right: 0;
+  border-radius: 0.14815rem 0 0 0.11852rem;
+}
+
+.details .moTai_putong .general .motai_con .num > dd span:last-child {
+  border-left: 0;
+  border-radius: 0 0.11852rem 0.11852rem 0;
+}
+
+.details .moTai_putong .general .mai {
+  width: 100%;
+  height: 1.83704rem;
+  border-top: 1px solid #aca59b;
+}
+
+.details .moTai_putong .general .mai > button {
   width: 100%;
   height: 100%;
   border: 0;
